# clhero_gazebo_simulation

./: README.md
clhero_gazebo/: CMakeLists.txt  package.xml
clhero_gazebo/launch/: clhero.launch  clhero_cinta.launch  clhero_elevado.launch  clhero_gazebo.launch
clhero_gazebo/worlds/: clhero.world  clhero_office.world
clhero_sim_controllers/: CMakeLists.txt  package.xml
clhero_sim_controllers/config/: clhero_sim_controllers.yaml
clhero_sim_controllers/launch/: clhero_sim_controllers.launch
clhero_sim_description/: CMakeLists.txt  package.xml
clhero_sim_description/launch/: clhero_cinta_state_robot.launch  clhero_rviz.launch  clhero_state_robot.launch
clhero_sim_description/meshes/: chasis_con_ejes.stl  chasis_sin_ejes.stl  cinta_barreras.stl  pvc200_50_30_grados.stl
clhero_sim_description/robots/: clhero.cinta.xacro  clhero.pedestal.xacro  clhero.robot.xacro  clhero.urdf.xacro  clhero_locked.xacro
clhero_sim_description/urdf/: base.robot.xacro  base.xacro  base_cinta.xacro  base_locked.xacro  base_pedestal.xacro  pata_c.robot.xacro  pata_c.xacro  pata_c_cinta.xacro  pata_c_locked.xacro
