<?xml version="1.0"?>
<package>
  <name>clhero_gazebo</name>
  <version>1.0.0</version>
  <description>Launch files and world files to start the models in gazebo</description>

  <license>BSD</license>

  <author email="raulcebolla@gmail.com">Raul Cebolla Arroyo</author>
  <maintainer email="raulcebolla@gmail.com">Raul Cebolla Arroyo</maintainer>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>clhero_sim_description</build_depend> 
  <build_depend>xacro</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>    
  <run_depend>clhero_sim_description</run_depend> 
  <run_depend>xacro</run_depend> 
  <run_depend>hector_gazebo_plugins</run_depend> 
  <run_depend>gazebo_plugins</run_depend> 

  <export>
	  <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
  
</package>
